# Kran-doc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  Makefile  PROJECT_STATUS.md  README.md  README.txt  SECURITY.md  docker-compose.production.yml  docker-compose.yml  h  how error code + BMK fields (remove debug)  pdfdoc.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  test.yml
adapters/: __init__.py  security.py
community/: users.json
config/: config.yaml  explain_rules.json  explain_templates.json  model_patterns.json  settings.py
core/: __init__.py
core/search/: __init__.py  fusion_search.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_V2.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  OVERVIEW.md  QUICKSTART_DEV.md  ROADMAP.md
docs/reference/: muster_wissenskarte_v1.json
examples/: integration_example.py
scripts/: bmk_parser.py  build_explain_catalog.py  build_local_embedding_index.py  check_codes.py  config_loader.py  data_models.py  debug_bmk_links.py  docling_processor.py  doctor.py  error_handler.py  ersatzteile_parser.py  export_for_embeddings.py  global_index_builder.py  lec_parser.py  logger.py  lsb_utils.py  manual_parser.py  merge_chunks.py  merge_knowledge.py  model_detection.py  netlist_extractor.py  ocr_processor.py  parse_manuals_for_all.py  pdfdoc_cli.py  qdrant_manager.py  rebuild_knowledge_pipeline.py  reference_loader.py  reset_knowledge_artifacts.py  run_pdfdoc_pipeline.py  run_report.py  search_bmk.py  search_cli.py  semantic_index.py  spl_parser.py  validate_system.py  wissensmodul_builder.py
scripts/bundles/: __init__.py  export_bundle.py  import_bundle.py
scripts/jobs/: __init__.py  models.py  tasks.py  worker.py
tests/: __init__.py  check_semantic_api.py  conftest.py  test_basic.py  test_bundle_manifest.py  test_error_handler.py  test_logger.py  test_search_fusion.py  test_smoke.py  test_tools.py
tools/: README.md  __init__.py  cache_manager.py  doc_generator.py  health_check.py  parallel_processor.py  performance_monitor.py  release.ps1  test_runner.py
webapp/: app.py  spl_pin_hints.py  telegram_notify.py
webapp/blueprints/: __init__.py  admin.py  auth.py  ops.py  search.py
webapp/repositories/: community_repository.py
webapp/services/: audit_service.py  auth_flow_service.py  bmk_component_service.py  bmk_index_service.py  bmk_search_service.py  bundle_service.py  community_service.py  contact_service.py  diagnosis_service.py  document_service.py  embedding_service.py  ersatzteile_service.py  explain_catalog_service.py  explain_service.py  feedback_service.py  fusion_service.py  general_search_service.py  home_service.py  import_service.py  insights_service.py  jobs_service.py  knowledge_service.py  lec_bmk_service.py  lsb_service.py  pipeline_service.py  query_service.py  result_service.py  search_explain_service.py  search_flow_service.py  security_service.py  status_service.py  user_service.py
webapp/static/: contact.js  style.css
webapp/templates/: _contact_modal.html  account_login.html  account_register.html  chunk_detail.html  community_review.html  community_solutions.html  community_submit.html  index.html  login.html  report.html
webapp/templates/admin/: dashboard.html  solutions.html  users.html
webapp/templates/auth/: login.html  register.html
webapp/templates/community/: submit_solution.html
